--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,11 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+html {
+  @apply bg-gray-900 text-gray-400 antialiased;
 }
